--- a/profile/themes/smc_base/scss/elements/search.scss
+++ b/profile/themes/smc_base/scss/elements/search.scss
@@ -118,6 +118,7 @@
     width: 30%;
     background-color: transparent;
     padding: 0;
+    z-index: 10;
     
     #opensanmateo-search-header-search-form {
       float: left;
